[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Piece.gd" type="Script" id=1]

[node name="Piece" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="MoveTween" type="Tween" parent="."]

[node name="SizeTween" type="Tween" parent="."]

[node name="ModulateTween" type="Tween" parent="."]

[connection signal="tween_completed" from="ModulateTween" to="." method="_on_ModulateTween_tween_completed"]
